# bubble_chamber

./: BubbleChamberSim.h.in  CMakeLists.txt  EBLsim.h.in  README.md  bubble_chamber.cc  do_sim  do_sim2  do_sim3  do_sim4  do_sim5  ebl_1.cc  exampleB1.cc  init_default.mac.in  make_plots.cxx  test_dawn.mac
containers/docker/: Dockerfile  Makefile  config.env  deploy.env  version.sh
containers/singularity/: Singularity
examples/: run1.mac  run2.mac  trajectory_model.mac  vis.mac  vis1.mac  vis2.mac
geometry_files/: Pb_pig.ply  beam_exit_port_and_collimator.ply  collimator_silver_insert.ply  glass_to_kovar_single_fluid.ply  internal_coll_and_port.ply  plug_flange_beam_port_mod.ply  steel_vessel.ply
include/: B1ActionInitialization.hh  B1Analysis.hh  B1DetectorConstruction.hh  B1DetectorMessenger.hh  B1ParallelWorldConstruction.hh  B1PrimaryGeneratorAction.hh  B1Run.hh  B1RunAction.hh  B1SteppingAction.hh  BeamTestHit.hh  BeamTestSD.hh  FakeSD.hh  FakeSDHit.hh  GPSConfig.hh  SimplePrimaryGeneratorAction.hh  SimulationManager.hh  StackingAction.hh
src/: B1ActionInitialization.cc  B1Analysis.cc  B1DetectorConstruction.cc  B1DetectorMessenger.cc  B1EventAction.cc  B1ParallelWorldConstruction.cc  B1PrimaryGeneratorAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc  BeamTestHit.cc  BeamTestSD.cc  FakeSD.cc  FakeSDHit.cc  GPSConfig.cc  SimplePrimaryGeneratorAction.cc  SimulationManager.ccc  StackingAction.cc
